# goit-pythonweb-hw-12

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  start.sh
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 78c7fa5910b3_init.py  a81c180eec1c_add_confirmed_with_default_false.py  e10b1d636590_add_user.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
tests/: test_contact_repository_unit.py  test_user_repository_unit.py
tests/integration/: conftest.py  test_integration_auth.py
tests/integration/auth/: conftest.py  test_integration_auth.py
tests/integration/contacts/: conftest.py  test_integration_contacts.py
tests/unit/: test_contact_services_unit.py  test_utils_unit.py
